[package]
name = "full_moon_common"
version = "0.1.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>", "rzvxa <rzvxa@protonmail.com>"]
description = "Library used in creating language plugins for the full_moon project."
license = "MPL-2.0"
repository = "https://github.com/Kampfkarren/full-moon"
edition = "2021"

[features]
default = ["serde"]

[dependencies]
paste = "1.0"
smol_str = { version = "0.1.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
